[package]
name = "jstest2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
quickjs_runtime = { version = "0.8.2", features = ["tokio_full"] }
tokio = { version = "1.20.1", features = ["full"] }
hirofa_utils = "0.5.3"
backtrace = "0.3.66"
simple-logging = "2.0.2"
log = "0.4.17"
serde = { version = "1.0.143", features = ["derive", "rc"] }
serde_json = { version = "1.0.83", features = ["raw_value"] }
